[gd_scene load_steps=3 format=2]

[ext_resource path="res://OptionsContainer.gd" type="Script" id=1]
[ext_resource path="res://Fonts/roboto-36.tres" type="DynamicFont" id=2]

[node name="Custom_Difficulty" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -604.0
margin_bottom = -160.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 651.0
margin_bottom = 535.0
custom_constants/separation = 26
alignment = 1
script = ExtResource( 1 )

[node name="BombOptions" type="HBoxContainer" parent="MarginContainer/OptionsContainer"]
margin_top = 172.0
margin_right = 626.0
margin_bottom = 210.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/OptionsContainer/BombOptions"]
margin_right = 256.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0.894118, 0.443137, 0.133333, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 2 )
text = "Bomb percent"

[node name="BombSlider" type="HSlider" parent="MarginContainer/OptionsContainer/BombOptions"]
margin_left = 271.0
margin_right = 541.0
margin_bottom = 38.0
rect_min_size = Vector2( 270, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.01
max_value = 0.99
step = 0.01
value = 0.1

[node name="numericalValue" type="Label" parent="MarginContainer/OptionsContainer/BombOptions"]
margin_left = 556.0
margin_right = 626.0
margin_bottom = 38.0
rect_min_size = Vector2( 70, 0 )
custom_colors/font_color_shadow = Color( 0.894118, 0.443137, 0.133333, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 2 )
text = "10%"
align = 2

[node name="HeightOptions" type="HBoxContainer" parent="MarginContainer/OptionsContainer"]
margin_top = 236.0
margin_right = 626.0
margin_bottom = 274.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/OptionsContainer/HeightOptions"]
margin_right = 256.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0.894118, 0.443137, 0.133333, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 2 )
text = "Choose height"

[node name="HeightSlider" type="HSlider" parent="MarginContainer/OptionsContainer/HeightOptions"]
margin_left = 271.0
margin_right = 541.0
margin_bottom = 38.0
rect_min_size = Vector2( 270, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 2.0
max_value = 20.0
value = 10.0

[node name="numericalValue" type="Label" parent="MarginContainer/OptionsContainer/HeightOptions"]
margin_left = 556.0
margin_right = 626.0
margin_bottom = 38.0
rect_min_size = Vector2( 70, 0 )
custom_colors/font_color_shadow = Color( 0.894118, 0.443137, 0.133333, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2

[node name="WidthOptions" type="HBoxContainer" parent="MarginContainer/OptionsContainer"]
margin_top = 300.0
margin_right = 626.0
margin_bottom = 338.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/OptionsContainer/WidthOptions"]
margin_right = 256.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0.894118, 0.443137, 0.133333, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 2 )
text = "Choose width"

[node name="WidthSlider" type="HSlider" parent="MarginContainer/OptionsContainer/WidthOptions"]
margin_left = 271.0
margin_right = 541.0
margin_bottom = 38.0
rect_min_size = Vector2( 270, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 2.0
max_value = 20.0
value = 10.0

[node name="numericalValue" type="Label" parent="MarginContainer/OptionsContainer/WidthOptions"]
margin_left = 556.0
margin_right = 626.0
margin_bottom = 38.0
rect_min_size = Vector2( 70, 0 )
custom_colors/font_color_shadow = Color( 0.894118, 0.443137, 0.133333, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2

[connection signal="value_changed" from="MarginContainer/OptionsContainer/BombOptions/BombSlider" to="MarginContainer/OptionsContainer" method="_on_BombSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/OptionsContainer/HeightOptions/HeightSlider" to="MarginContainer/OptionsContainer" method="_on_HeightSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/OptionsContainer/WidthOptions/WidthSlider" to="MarginContainer/OptionsContainer" method="_on_WidthSlider_value_changed"]
